CARROT-936: use a custom invoker to run dcs.